clean up codes